src/objects/loan__Consolidated_Loan_Payment_Interface__c.object
<CustomObject>
    <description>This is the user interface for Consolidated Loan  Payment.</description>
    <fields>
        <fullName>loan__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Interface</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Interface</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Interface</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode_Name__c</fullName>
        <label>Payment Mode Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Consolidated Loan Payment Interface</relationshipLabel>
        <relationshipName>Consolidated_Loan_Payment_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <description>Captures the check number</description>
        <inlineHelpText>Captures the check number</inlineHelpText>
        <label>Reference</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <description>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Record has been created in target system
Post-Import Valid - Post record creation validations completed
Error - Record is in error state</description>
        <inlineHelpText>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Target record created
Post-Import Valid - Post record creation validations completed
Error - Record in error</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Import</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Consolidated Loan Payment Interface</label>
    <nameField>
        <displayFormat>CLPI-{0000000000}</displayFormat>
        <label>Consolidated Loan Payment Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Loan Payment Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>